--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
 						<h2>Currently Watching</h2>
 						<div class="tiled-list">
 							<!-- <div class="tile"><a href=""><img class="thumbnail" src="" alt=""></img></a></div> -->
-							<div class="tile"><a href="https://kitsu.io/anime/shingeki-no-kyojin-the-final-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42422/large.jpg?1593607834" alt="Attack on Titan The Final Season"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/enen-no-shouboutai-ni-no-shou"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42909/large.jpg?1597690744" alt="Fire Force Season 2"></img></a></div>					
-							<div class="tile"><a href="https://kitsu.io/anime/dr-stone-two"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42867/large.jpg?1611329475" alt="Dr. Stone: Stone Wars"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/yuru-camp-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41976/large.jpg?1597696867" alt=" Laid-Back Camp 2"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/boku-no-hero-academia-5th-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43108/large.jpg?1607694967" alt="My Hero Academia 5"></img></a></div> 
+							<div class="tile"><a href="https://kitsu.io/anime/shingeki-no-kyojin-the-final-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42422/large.jpg?1593607834" alt="Attack on Titan The Final Season"></img></a></div>							
+							<div class="tile"><a href="https://kitsu.io/anime/dr-stone-two"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42867/large.jpg?1611329475" alt="Dr. Stone: Stone Wars"></img></a></div>							
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
 
@@ -109,13 +108,13 @@
 						<div class="tiled-list">
 							<div class="tile"><a href="https://kitsu.io/anime/re-zero-kara-hajimeru-isekai-seikatsu-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42198/large.jpg?1597696997" alt="Re:ZERO Season 2"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/5-toubun-no-hanayome-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42324/large.jpg?1597697087" alt="The Quintessential Quintuplets 2"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/jujutsu-kaisen"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42765/large.jpg?1601027481" alt="Jujutsu Kaisen"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/majo-no-tabitabi"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42627/large.jpg?1571491060" alt="The Journey of Elaina"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/jujutsu-kaisen"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42765/large.jpg?1601027481" alt="Jujutsu Kaisen"></img></a></div>						
+							<div class="tile"><a href="https://kitsu.io/anime/ore-dake-haireru-kakushi-dungeon"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43301/large.jpg?1607696005" alt="The Hidden Dungeon Only I Can Enter"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/log-horizon-3rd-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42957/large.jpg?1597692116" alt="Log Horizon: Season 3"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42196/large.jpg?1597691848" alt="Reincarnated as a Slime 2"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/kuma-kuma-kuma-bear"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43214/large.jpg?1597691134" alt="The Bears Bear a Bare Kuma "></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42196/large.jpg?1597691848" alt="Reincarnated as a Slime 2"></img></a></div>							
 							<div class="tile"><a href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42323/large.jpg?1571408000" alt="Mushoku Tensei: Jobless Reincarnation"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/horimiya"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43545/large.jpg?1609224996" alt="Horimiya "></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/wonder-egg-priority"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43620/large.jpg?1616155451" alt="Wonder Egg Priority"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/kumo-desu-ga-nani-ka"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41463/large.jpg?1593607925" alt="So I'm a Spider, So What?"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/tatoeba-last-dungeon-mae-no-mura-no-shounen-ga-joban-no-machi-de-kurasu-youna-monogatari"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42635/large.jpg?1571504181" alt="The Hidden Dungeon Only I Can Enter"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/fruits-basket-2019"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41995/large.jpg?1597696876" alt="Fruits Basket"></img></a></div>
@@ -124,11 +123,11 @@
 
 					<div class="watching-item"><!--Most Anticipated-->
 						<h2>Most Anticipated</h2>
-						<div class="tiled-list">							
-							<div class="tile"><a href="https://kitsu.io/anime/boku-no-hero-academia-5th-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43108/large.jpg?1607694967" alt="My Hero Academia 5"></img></a></div> 
+						<div class="tiled-list">														
 							<div class="tile"><a href="https://kitsu.io/anime/ijiranaide-nagatoro-san"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43271/large.jpg?1593686865" alt="Don’t Toy With Me, Miss Nagatoro"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/fumetsu-no-anata-e"><img class="thumbnail" src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b114535-jEzNgKyVxLNT.jpg" alt="To Your Eternity"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/isekai-maou-to-shoukan-shoujo-no-dorei-majutsu-2"><img class="thumbnail" src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx117448-IRah2GxIlwLH.jpg" alt="How Not to Summon a Demon Lord 2"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/slime-taoshite-300-nen-shiranai-uchi-ni-level-max-ni-nattemashita"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42628/large.jpg?1618062191" alt=" I've Been Killing Slimes for 300 Years "></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/zombieland-saga-revenge"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42467/large.jpg?1609509747" alt="Zombieland Saga Revenge"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/tate-no-yuusha-no-nariagari-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42530/large.jpg?1599926560" alt="The Rising of the Shield Hero 2"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/sword-art-online-progressive-movie-hoshi-naki-yoru-no-aria"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43546/large.jpg?1600530798" alt="Sword Art Online: Progressive Movie "></img></a></div> 
@@ -301,7 +300,7 @@
 							<div class="tile"><a href="https://myanimelist.net/character/152119/Rin_Shima"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/14/353089.jpg" alt="Rin Shima"></img></a></div>
 							<div class="tile"><a href="https://myanimelist.net/character/163271/Tsukasa_Yuzaki"><img class="thumbnail" src="assets/images/thumbnails/Tsukasa-Yuzaki.png" alt="Tsukuyomi Yuzaki"></img></a></div>
 							<div class="tile"><a href="https://myanimelist.net/character/136359/Kaguya_Shinomiya"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/9/371540.jpg" alt="Kaguya Shinomiya"></img></a></div>
-							<div class="tile"><a href="https://myanimelist.net/character/36828/Asuna_Yuuki"><img class="thumbnail" src="https://media.kitsu.io/characters/images/35731/original.jpg?1483096805" alt="Asuna Yuuki"></img></a></div>	
+							<div class="tile"><a href="https://myanimelist.net/character/151335/Elaina"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/10/330816.jpg" alt="Elaina The Ashen Witch"></img></a></div>
 						</div>
 
 						<button onclick="more_female_btn()" id="more_female_btn" class="more-char-btn">Show more</button>
@@ -315,10 +314,10 @@
 							<div class="tile more-female"><a href="https://myanimelist.net/character/160603/Miku_Nakano"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/11/366718.jpg" alt="Miku Nakano"></img></a></div>
 							<div class="tile more-female"><a href="https://myanimelist.net/character/48391/Chitoge_Kirisaki?q=chitoge&cat=character"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/7/241651.jpg" alt="Chitoge Kirisaki"></img></a></div>
 							<div class="tile more-female"><a href="https://myanimelist.net/character/19566/Mio_Akiyama"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/11/48547.jpg" alt="Mio Akiyama"></img></a></div>
+							<div class="tile more-female"><a href="https://myanimelist.net/character/36828/Asuna_Yuuki"><img class="thumbnail" src="https://media.kitsu.io/characters/images/35731/original.jpg?1483096805" alt="Asuna Yuuki"></img></a></div>	
 							<div class="tile more-female"><a href="https://myanimelist.net/character/2063/Yoko_Littner"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/14/34848.jpg" alt="Yoko Littner"></img></a></div>
 							<div class="tile more-female"><a href="https://myanimelist.net/character/5189/Erza_Scarlet"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/14/138459.webp" alt="Erza Scarlet"></img></a></div>
 							<div class="tile more-female"><a href="https://myanimelist.net/character/93273/Hestia"><img class="thumbnail" src="https://myanimelist.net/images/characters/16/285883.webp" alt="Hestia"></img></a></div>
-							<div class="tile more-female"><a href="https://myanimelist.net/character/99035/Isuzu_Sento"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/7/265243.jpg" alt="Isuzu Sento"></img></a></div>
 						</div>						
 					</div><!--Female Characters-->
 					
