--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 						<h2>Currently Watching</h2>
 						<div class="tiled-list">
 							<!-- <div class="tile"><a href=""><img class="thumbnail" src="" alt=""></img></a></div> -->
+							<div class="tile"><a href="https://kitsu.io/anime/black-clover-tv"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13209/large.jpg?1611504643" alt="Black Clover"></img></a></div> 
 							<div class="tile"><a href="https://kitsu.io/anime/boku-no-hero-academia-5th-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43108/large.jpg?1607694967" alt="My Hero Academia 5"></img></a></div> 
 							<div class="tile"><a href="https://kitsu.io/anime/shingeki-no-kyojin-the-final-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42422/large.jpg?1593607834" alt="Attack on Titan The Final Season"></img></a></div>							
 							<div class="tile"><a href="https://kitsu.io/anime/dr-stone-two"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42867/large.jpg?1611329475" alt="Dr. Stone: Stone Wars"></img></a></div>							
@@ -86,13 +87,21 @@
 							<div class="tile"><a href="https://kitsu.io/anime/kono-subarashii-sekai-ni-shukufuku-wo-movie"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41440/large.jpg?1553411074" alt="KonoSuba: Legend of Crimson"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/kimetsu-no-yaiba-movie-mugen-ressha-hen"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42586/large.jpg?1603823890" alt="Demon Slayer Movie: Infinity Train"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/violet-evergarden-movie"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41450/large.jpg?1597696766" alt=" Violet Evergarden the Movie"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/made-in-abyss-fukaki-tamashii-no-reimei"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/14027/large.jpg?1597690682" alt="Made in Abyss: Dawn of the Deep Soul"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/one-piece-stampede"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42061/large.jpg?1597696912" alt="One Piece Movie 14: Stampede"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/the-girl-who-leapt-through-time"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/2027/large.jpg?1597698085" alt="The Girl Who Leapt Through Time"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/kiki-s-delivery-service"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/471/large.jpg?1597696643" alt="Kiki's Delivery Service"></img></a></div>						
+							<!--
+							<div class="tile"><a href="https://kitsu.io/anime/howl-s-moving-castle"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/395/large.jpg?1597698759" alt="Howl's Moving Castle"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/nakitai-watashi-wa-neko-wo-kaburu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42965/large.jpg?1597697453" alt="A Whisker Away"></img></a></div>
+							-->
 						</div><!-- tiled-list -->
 					</div><!-- Movie Night-->						
 
 					<div class="watching-item"><!--Backlog Bingeing-->
 						<h2>Backlog Bingeing</h2>
 						<div class="tiled-list">
-							<div class="tile"><a href="https://kitsu.io/anime/hataraku-saibou-tv"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/14212/large.jpg?1597697195" alt="Cells at Work!"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/hataraku-saibou-tv"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/14212/large.jpg?1597697195" alt="Cells at Work!"></img></a></div>							
 							<div class="tile"><a href="https://kitsu.io/anime/yahari-ore-no-seishun-love-comedy-wa-machigatteiru-kan"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42194/large.jpg?1597696997" alt="My Teen Romantic Comedy SNAFU Climax"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/nichijou"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/6062/large.jpg?1597696783" alt="Nichijou "></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/chuunibyou-demo-koi-ga-shitai"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7160/large.jpg?1597699260" alt="Love, Chunibyo & Other Delusions!"></img></a></div> 
@@ -100,6 +109,10 @@
 							<div class="tile"><a href="https://kitsu.io/anime/anohana-the-flower-we-saw-that-day"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/5981/large.jpg?1597696751" alt="Anohana: The Flower We Saw That Day"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/shirobako"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8698/large.jpg?1597696859" alt="Shirobako"></img></a></div> 
 							<div class="tile"><a href="https://kitsu.io/anime/sakurasou-no-pet-na-kanojo"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7023/large.jpg?1597696828" alt="https://media.kitsu.io/anime/poster_images/7023/large.jpg?1597696828"></img></a></div> 
+							<div class="tile"><a href="https://kitsu.io/anime/3-gatsu-no-lion"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/11380/large.jpg?1597696842" alt="March comes in like a lion"></img></a></div> 
+							<div class="tile"><a href="https://kitsu.io/anime/dumbbell-nan-kilo-moteru"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42134/large.jpg?1597691884" alt="How Heavy Are the Dumbbells You Lift?"></img></a></div> 
+							<div class="tile"><a href="https://kitsu.io/anime/sewayaki-kitsune-no-senko-san"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42026/large.jpg?1597697553" alt="The Helpful Fox Senko-san"></img></a></div> 
+							<div class="tile"><a href="https://kitsu.io/anime/aho-girl"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13259/large.jpg?1499226484" alt="AHO-GIRL"></img></a></div> 
 						</div><!-- tiled-list -->
 					</div><!--Backlog Bingeing -->
 
@@ -142,8 +155,12 @@
 						<div class="tile"><a href="https://kitsu.io/anime/a-place-further-than-the-universe"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13615/large.jpg?1597696818" alt="A Place Further Than the Universe"></img></a></div>						
 						<div class="tile"><a href="https://kitsu.io/anime/seishun-buta-yarou-wa-bunny-girl-senpai-no-yume-wo-minai"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41056/large.jpg?1597698765" alt="Rascal Does Not Dream of Bunny Girl Senpai"></img></a></div>
 						<div class="tile"><a href="https://kitsu.io/anime/wotaku-ni-koi-wa-muzukashii"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13660/large.jpg?1597696908" alt="Wotakoi: Love Is Hard for Otaku"></img></a></div>
+						<div class="tile"><a href="https://kitsu.io/anime/yuru-camp"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13480/large.jpg?1514516868" alt="Laid-Back Camp"></img></a></div>					
+						<div class="tile"><a href="https://kitsu.io/anime/jinrui-wa-suitai-shimashita"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/6146/large.jpg?1597697141" alt="Humanity Has Declined"></img></a></div>
+						<div class="tile"><a href="https://kitsu.io/anime/kishuku-gakkou-no-juliet"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41065/large.jpg?1597691087" alt="Boarding School Juliet"></img></a></div>
+						<div class="tile"><a href="https://kitsu.io/anime/mahouka-koukou-no-rettousei"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8053/large.jpg?1597694878" alt="The Irregular at Magic High School"></img></a></div>
 						</div><!-- tiled-list -->
-					</div><!-- Dub to Finish-->							
+					</div><!-- Please Dub-->							
 				</div><!-- watching -->
 				
 				<div id="tab_favorites" class="tab tab-active main-item">
