updated watch items grid
Made watching items single row scrolling when in smallest screen size

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<div id="tab_watching" class="tab tab-active tab-selected main-item">
 					<div class="watching-item"><!--Currently Watching-->
 						<h2>Currently Watching</h2>
-						<div class="tiled-list">
+						<div class="tiled-list scrolling-tiled-list">
 							<!-- <div class="tile"><a href=""><img class="thumbnail" src="" alt=""></img></a></div> -->
 							<div class="tile"><a href="https://kitsu.io/anime/black-clover-tv"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13209/large.jpg?1611504643" alt="Black Clover"></img></a></div> 
 							<div class="tile"><a href="https://kitsu.io/anime/boku-no-hero-academia-5th-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43108/large.jpg?1607694967" alt="My Hero Academia 5"></img></a></div> 
@@ -82,7 +82,7 @@
 
 					<div class="watching-item"><!--Movie Night-->
 						<h2>Movie Night</h2>
-						<div class="tiled-list">
+						<div class="tiled-list scrolling-tiled-list">
 							<div class="tile"><a href="https://kitsu.io/anime/tenki-no-ko-weathering-with-you"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42028/large.jpg?1597696900" alt="Weathering With You"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/kono-subarashii-sekai-ni-shukufuku-wo-movie"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41440/large.jpg?1553411074" alt="KonoSuba: Legend of Crimson"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/kimetsu-no-yaiba-movie-mugen-ressha-hen"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42586/large.jpg?1603823890" alt="Demon Slayer Movie: Infinity Train"></img></a></div>
@@ -100,7 +100,7 @@
 
 					<div class="watching-item"><!--Backlog Bingeing-->
 						<h2>Backlog Bingeing</h2>
-						<div class="tiled-list">
+						<div class="tiled-list scrolling-tiled-list">
 							<div class="tile"><a href="https://kitsu.io/anime/hataraku-saibou-tv"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/14212/large.jpg?1597697195" alt="Cells at Work!"></img></a></div>							
 							<div class="tile"><a href="https://kitsu.io/anime/yahari-ore-no-seishun-love-comedy-wa-machigatteiru-kan"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42194/large.jpg?1597696997" alt="My Teen Romantic Comedy SNAFU Climax"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/nichijou"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/6062/large.jpg?1597696783" alt="Nichijou "></img></a></div>
@@ -118,7 +118,7 @@
 
 					<div class="watching-item"><!--Waiting To Binge-->
 						<h2>Waiting for Dub to Finish</h2>
-						<div class="tiled-list">
+						<div class="tiled-list scrolling-tiled-list">
 							<div class="tile"><a href="https://kitsu.io/anime/re-zero-kara-hajimeru-isekai-seikatsu-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42198/large.jpg?1597696997" alt="Re:ZERO Season 2"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/5-toubun-no-hanayome-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42324/large.jpg?1597697087" alt="The Quintessential Quintuplets 2"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/jujutsu-kaisen"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42765/large.jpg?1601027481" alt="Jujutsu Kaisen"></img></a></div>						
@@ -136,7 +136,7 @@
 
 					<div class="watching-item"><!--Most Anticipated-->
 						<h2>Most Anticipated</h2>
-						<div class="tiled-list">														
+						<div class="tiled-list scrolling-tiled-list">														
 							<div class="tile"><a href="https://kitsu.io/anime/ijiranaide-nagatoro-san"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43271/large.jpg?1593686865" alt="Don’t Toy With Me, Miss Nagatoro"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/fumetsu-no-anata-e"><img class="thumbnail" src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b114535-jEzNgKyVxLNT.jpg" alt="To Your Eternity"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/isekai-maou-to-shoukan-shoujo-no-dorei-majutsu-2"><img class="thumbnail" src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx117448-IRah2GxIlwLH.jpg" alt="How Not to Summon a Demon Lord 2"></img></a></div>
@@ -150,7 +150,7 @@
 				
 					<div class="watching-item"><!--Please Dub -->
 						<h2>Please Dub</h2>
-						<div class="tiled-list">
+						<div class="tiled-list scrolling-tiled-list">
 						<div class="tile"><a href="https://kitsu.io/anime/vinland-saga"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41084/large.jpg?1597696763" alt="VINLAND SAGA"></img></a></div>
 						<div class="tile"><a href="https://kitsu.io/anime/a-place-further-than-the-universe"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13615/large.jpg?1597696818" alt="A Place Further Than the Universe"></img></a></div>						
 						<div class="tile"><a href="https://kitsu.io/anime/seishun-buta-yarou-wa-bunny-girl-senpai-no-yume-wo-minai"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41056/large.jpg?1597698765" alt="Rascal Does Not Dream of Bunny Girl Senpai"></img></a></div>
